fix(domain): test create zone

--- a/scaleway/testdata/data-source-domain-zone-basic.cassette.yaml
+++ b/scaleway/testdata/data-source-domain-zone-basic.cassette.yaml
@@ -2,6 +2,39 @@
 version: 1
 interactions:
 - request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; linux; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc
+    method: GET
+  response:
+    body: '{"total_count":0,"dns_zones":[]}'
+    headers:
+      Content-Length:
+      - "32"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Thu, 17 Feb 2022 13:34:18 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 62fd5312-da86-42b0-aa04-98a64f3bb08a
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
     body: '{"domain":"scaleway-terraform.com","subdomain":"test-zone","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}'
     form: {}
     headers:
@@ -13,7 +46,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones
     method: POST
   response:
-    body: '{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:32:25Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}'
+    body: '{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:18Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}'
     headers:
       Content-Length:
       - "297"
@@ -22,7 +55,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:32:26 GMT
+      - Thu, 17 Feb 2022 13:34:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +65,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a504b48c-337a-4fb7-8c22-e13361f985ba
+      - 0a1a58e8-7d4f-4246-8cc0-711b3bf20fa2
     status: 200 OK
     code: 200
     duration: ""
@@ -46,7 +79,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc
     method: GET
   response:
-    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:32:25Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
+    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:18Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
     headers:
       Content-Length:
       - "329"
@@ -55,7 +88,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:32:26 GMT
+      - Thu, 17 Feb 2022 13:34:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,7 +98,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 178d7d6c-e135-4924-970e-511dc5d73d96
+      - bcd2efb5-674a-4f5c-9bdf-e8387112616d
     status: 200 OK
     code: 200
     duration: ""
@@ -79,7 +112,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc
     method: GET
   response:
-    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:32:25Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
+    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:18Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
     headers:
       Content-Length:
       - "329"
@@ -88,7 +121,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:32:26 GMT
+      - Thu, 17 Feb 2022 13:34:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -98,7 +131,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b3aeec32-a310-4090-bfb8-e05cdcba3c9b
+      - 9043e4a6-9dd9-454a-aed7-93741a245805
     status: 200 OK
     code: 200
     duration: ""
@@ -112,7 +145,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc
     method: GET
   response:
-    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:32:25Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
+    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:18Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
     headers:
       Content-Length:
       - "329"
@@ -121,7 +154,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:32:26 GMT
+      - Thu, 17 Feb 2022 13:34:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -131,7 +164,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f721fd7f-6d09-4a3a-b739-cae8695b9e60
+      - e900e8d9-cb77-426a-ba6e-f9ff66e4fecf
     status: 200 OK
     code: 200
     duration: ""
@@ -145,7 +178,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc
     method: GET
   response:
-    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:32:25Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
+    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:18Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
     headers:
       Content-Length:
       - "329"
@@ -154,7 +187,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:32:26 GMT
+      - Thu, 17 Feb 2022 13:34:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -164,7 +197,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 7e0ee8b2-be1f-4429-91da-da86e71ff1ba
+      - 395397ec-1246-4234-8803-a05e8e784800
     status: 200 OK
     code: 200
     duration: ""
@@ -178,7 +211,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc&project_id=fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf
     method: GET
   response:
-    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:32:25Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
+    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:18Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
     headers:
       Content-Length:
       - "329"
@@ -187,7 +220,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:32:27 GMT
+      - Thu, 17 Feb 2022 13:34:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -197,7 +230,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 32cd46be-44a7-4068-bb4a-bece40efb11d
+      - ffe659f5-34db-4890-bf9d-c2e20b02e14d
     status: 200 OK
     code: 200
     duration: ""
@@ -211,7 +244,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc
     method: GET
   response:
-    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:32:25Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
+    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:18Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
     headers:
       Content-Length:
       - "329"
@@ -220,7 +253,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:32:27 GMT
+      - Thu, 17 Feb 2022 13:34:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -230,7 +263,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - fbdf53a4-fd28-4a7a-b6e1-741f501c1333
+      - 4e55de60-a7eb-4266-8b24-acb9c322bd2b
     status: 200 OK
     code: 200
     duration: ""
@@ -244,7 +277,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc
     method: GET
   response:
-    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:32:25Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
+    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:18Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
     headers:
       Content-Length:
       - "329"
@@ -253,7 +286,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:32:27 GMT
+      - Thu, 17 Feb 2022 13:34:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -263,7 +296,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f7f22157-db71-4a1e-8d2e-d32f6bf5d352
+      - 96117c59-a8a5-48b3-8473-9f0cbe17f3cb
     status: 200 OK
     code: 200
     duration: ""
@@ -286,7 +319,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:32:28 GMT
+      - Thu, 17 Feb 2022 13:34:20 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -296,7 +329,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 52bc2f66-630e-45d3-a910-745d55c75357
+      - 448e7da7-7b64-4b04-929c-ffb9b0d12f3e
     status: 200 OK
     code: 200
     duration: ""
@@ -319,7 +352,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:32:28 GMT
+      - Thu, 17 Feb 2022 13:34:20 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -329,7 +362,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9af5f2c6-d34b-4f8b-8916-f72a7180c6aa
+      - fae9fceb-53b9-4b33-af0c-f2c90715124c
     status: 200 OK
     code: 200
     duration: ""
