--- a/scaleway/testdata/domain-zone-basic.cassette.yaml
+++ b/scaleway/testdata/domain-zone-basic.cassette.yaml
@@ -2,6 +2,39 @@
 version: 1
 interactions:
 - request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; linux; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc
+    method: GET
+  response:
+    body: '{"total_count":0,"dns_zones":[]}'
+    headers:
+      Content-Length:
+      - "32"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Thu, 17 Feb 2022 13:34:22 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - da826c7a-6450-45c3-8834-6f8c1c2d07a5
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
     body: '{"domain":"scaleway-terraform.com","subdomain":"test-zone","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}'
     form: {}
     headers:
@@ -13,7 +46,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones
     method: POST
   response:
-    body: '{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:31:48Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}'
+    body: '{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:22Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}'
     headers:
       Content-Length:
       - "297"
@@ -22,7 +55,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:31:48 GMT
+      - Thu, 17 Feb 2022 13:34:22 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +65,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - dd547233-f211-4365-818a-b53de6e709e5
+      - f3f89ce3-b3ec-40d1-bb8d-1b124d85b79f
     status: 200 OK
     code: 200
     duration: ""
@@ -46,7 +79,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc
     method: GET
   response:
-    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:31:48Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
+    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:22Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
     headers:
       Content-Length:
       - "329"
@@ -55,7 +88,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:31:48 GMT
+      - Thu, 17 Feb 2022 13:34:22 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,7 +98,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f78957dd-6919-42a3-bedb-ab292380cac3
+      - d0b1f26c-66bd-4039-940b-f2ea44cec6fa
     status: 200 OK
     code: 200
     duration: ""
@@ -79,7 +112,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc
     method: GET
   response:
-    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:31:48Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
+    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:22Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
     headers:
       Content-Length:
       - "329"
@@ -88,7 +121,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:31:49 GMT
+      - Thu, 17 Feb 2022 13:34:22 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -98,7 +131,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 486cf7a3-68f7-49d3-9de7-fb5f693384e5
+      - dd2cc531-3909-4c89-bfa1-352605758a8e
     status: 200 OK
     code: 200
     duration: ""
@@ -112,7 +145,7 @@ interactions:
     url: https://api.scaleway.com/domain/v2beta1/dns-zones?dns_zone=test-zone.scaleway-terraform.com&domain=&order_by=domain_asc&project_id=fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf
     method: GET
   response:
-    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-15T15:31:48Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
+    body: '{"total_count":1,"dns_zones":[{"domain":"scaleway-terraform.com","subdomain":"test-zone","ns":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_default":["ns0.dom.scw.cloud","ns1.dom.scw.cloud"],"ns_master":[],"status":"active","message":null,"updated_at":"2022-02-17T13:34:22Z","project_id":"fbda9817-5c05-4e1d-aa8d-a1a8b0b80ddf"}]}'
     headers:
       Content-Length:
       - "329"
@@ -121,7 +154,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:31:49 GMT
+      - Thu, 17 Feb 2022 13:34:23 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -131,7 +164,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - e8ec2e49-b24a-497d-b499-d48e70b90205
+      - 994e0e71-3dc0-4b9d-b1eb-962f6053cbb3
     status: 200 OK
     code: 200
     duration: ""
@@ -154,7 +187,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:31:50 GMT
+      - Thu, 17 Feb 2022 13:34:23 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -164,7 +197,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 32744329-079e-429f-aadb-c60ed80aeaa5
+      - 98812076-a625-4db6-8426-ec0b30f17756
     status: 200 OK
     code: 200
     duration: ""
@@ -187,7 +220,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 15 Feb 2022 15:31:50 GMT
+      - Thu, 17 Feb 2022 13:34:24 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -197,7 +230,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a1aa9ecc-6b87-4877-996d-a6bc230a47c9
+      - 659358d8-a507-4586-afc6-163def39ff20
     status: 200 OK
     code: 200
     duration: ""
